[gd_scene load_steps=34 format=2]

[ext_resource path="res://rectangle.png" type="Texture" id=1]
[ext_resource path="res://art/Player/bluefront.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/Player/bluebackwalk1.png" type="Texture" id=4]
[ext_resource path="res://Key.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/Player/blueright.png" type="Texture" id=6]
[ext_resource path="res://art/Player/bluedown2.png" type="Texture" id=7]
[ext_resource path="res://art/Player/bluedown1.png" type="Texture" id=8]
[ext_resource path="res://art/Player/blueback.png" type="Texture" id=9]
[ext_resource path="res://art/Player/blueleftwalk1.png" type="Texture" id=10]
[ext_resource path="res://art/Player/blueleftwalk2.png" type="Texture" id=11]
[ext_resource path="res://art/Player/blueleft.png" type="Texture" id=12]
[ext_resource path="res://art/Player/bluebackwalk2.png" type="Texture" id=13]
[ext_resource path="res://art/Player/bluerightwalk2.png" type="Texture" id=14]
[ext_resource path="res://art/Player/bluerightwalk1.png" type="Texture" id=15]
[ext_resource path="res://stage1_player.gd" type="Script" id=16]
[ext_resource path="res://stage2_player.gd" type="Script" id=17]
[ext_resource path="res://rectangle_icon_144162.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 227.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 325, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 123 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 154 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 200, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 73.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1, 100 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 115, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1, 54 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 48, 38.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 47.75, 38.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 48, 38.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 48, 38.5 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 13 ) ],
"loop": true,
"name": "back",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "right",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
height = 11.5

[node name="World" type="Node2D"]
position = Vector2( 316, 293 )
scale = Vector2( 1.19342, 1.21813 )

[node name="main" type="Node" parent="."]

[node name="main_screen1" type="Polygon2D" parent="main"]
color = Color( 0.988235, 0.67451, 0.67451, 1 )
polygon = PoolVector2Array( 0, 0, 0, 455, 650, 455, 650, 0 )

[node name="main_key1" type="Polygon2D" parent="main"]
color = Color( 0.623529, 0.470588, 0.470588, 1 )
polygon = PoolVector2Array( 0, 455, 0, 700, 650, 700, 650, 455 )

[node name="main_screen" type="Sprite" parent="main"]
visible = false
position = Vector2( 325, 227.5 )
scale = Vector2( 1.26953, 1.41992 )
texture = ExtResource( 1 )

[node name="main_key" type="Sprite" parent="main"]
visible = false
position = Vector2( 325, 578 )
scale = Vector2( 1.26953, 0.765625 )
texture = ExtResource( 1 )

[node name="main_screen2" type="StaticBody2D" parent="main"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="main/main_screen2"]
position = Vector2( 1, 227.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="main/main_screen2"]
position = Vector2( 649, 227.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="main/main_screen2"]
position = Vector2( 325, 1 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="main/main_screen2"]
position = Vector2( 325, 454 )
shape = SubResource( 3 )

[node name="main_key2" type="StaticBody2D" parent="main"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="main/main_key2"]
position = Vector2( 1, 577 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="main/main_key2"]
position = Vector2( 649, 577 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="main/main_key2"]
position = Vector2( 325, 456 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="main/main_key2"]
position = Vector2( 325, 699 )
shape = SubResource( 3 )

[node name="stage1" type="Node" parent="."]

[node name="stage1_screen1" type="Polygon2D" parent="stage1"]
color = Color( 0.937255, 0.862745, 0.729412, 1 )
polygon = PoolVector2Array( 125, 0, 525, 0, 525, 308, 125, 308 )

[node name="stage1_key1" type="Polygon2D" parent="stage1"]
color = Color( 0.866667, 0.694118, 0.384314, 1 )
polygon = PoolVector2Array( 125, 455, 525, 455, 525, 308, 125, 308 )

[node name="stage1_screen" type="Sprite" parent="stage1"]
visible = false
position = Vector2( 325, 154 )
scale = Vector2( 0.78125, 0.960938 )
texture = ExtResource( 1 )

[node name="stage1_key" type="Sprite" parent="stage1"]
visible = false
position = Vector2( 324.5, 381.5 )
scale = Vector2( 0.783203, 0.458984 )
texture = ExtResource( 1 )

[node name="stage1_screen2" type="StaticBody2D" parent="stage1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage1/stage1_screen2"]
position = Vector2( 126, 154 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="stage1/stage1_screen2"]
position = Vector2( 524, 154 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="stage1/stage1_screen2"]
position = Vector2( 325, 1 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="stage1/stage1_screen2"]
position = Vector2( 325, 307 )
shape = SubResource( 6 )

[node name="stage1_key2" type="StaticBody2D" parent="stage1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage1/stage1_key2"]
position = Vector2( 126, 381.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="stage1/stage1_key2"]
position = Vector2( 524, 381.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="stage1/stage1_key2"]
position = Vector2( 325, 309 )
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="stage1/stage1_key2"]
position = Vector2( 325, 454 )
shape = SubResource( 6 )

[node name="stage2" type="Node" parent="."]

[node name="stage2_screen1" type="Polygon2D" parent="stage2"]
color = Color( 0.815686, 0.729412, 0.937255, 1 )
polygon = PoolVector2Array( 210, 0, 440, 0, 440, 200, 210, 200 )

[node name="stage2_key1" type="Polygon2D" parent="stage2"]
color = Color( 0.635294, 0.384314, 0.866667, 1 )
polygon = PoolVector2Array( 210, 200, 440, 200, 440, 308, 210, 308 )

[node name="stage2_screen" type="Sprite" parent="stage2"]
visible = false
position = Vector2( 325.5, 99.5 )
scale = Vector2( 0.447266, 0.626953 )
texture = ExtResource( 1 )

[node name="stage2_key" type="Sprite" parent="stage2"]
visible = false
position = Vector2( 325, 254.069 )
scale = Vector2( 0.449219, 0.339575 )
texture = ExtResource( 1 )

[node name="stage2_screen2" type="StaticBody2D" parent="stage2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage2/stage2_screen2"]
position = Vector2( 211, 100 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="stage2/stage2_screen2"]
position = Vector2( 439, 100 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="stage2/stage2_screen2"]
position = Vector2( 325, 1 )
shape = SubResource( 9 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="stage2/stage2_screen2"]
position = Vector2( 325, 199 )
shape = SubResource( 9 )

[node name="stage2_key2" type="StaticBody2D" parent="stage2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage2/stage2_key2"]
position = Vector2( 211, 254 )
shape = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="stage2/stage2_key2"]
position = Vector2( 439, 254 )
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="stage2/stage2_key2"]
position = Vector2( 325, 201 )
shape = SubResource( 9 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="stage2/stage2_key2"]
position = Vector2( 325, 307 )
shape = SubResource( 9 )

[node name="main_direction" type="Node" parent="."]

[node name="left_key" type="Area2D" parent="main_direction"]
position = Vector2( 127, 268 )
scale = Vector2( 0.6, 0.54 )

[node name="left" type="Sprite" parent="main_direction/left_key"]
position = Vector2( 217.2, 613.44 )
scale = Vector2( 0.2, 0.24 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_direction/left_key"]
position = Vector2( 217, 613.5 )
shape = SubResource( 12 )

[node name="right_key" type="Area2D" parent="main_direction"]
position = Vector2( 127, 267 )
scale = Vector2( 0.6, 0.54 )

[node name="right" type="Sprite" parent="main_direction/right_key"]
position = Vector2( 441.2, 613.44 )
scale = Vector2( 0.2, 0.24 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_direction/right_key"]
position = Vector2( 441.25, 613.5 )
shape = SubResource( 13 )

[node name="up_key" type="Area2D" parent="main_direction"]
position = Vector2( 130, 265 )
scale = Vector2( 0.6, 0.54 )

[node name="up" type="Sprite" parent="main_direction/up_key"]
position = Vector2( 328.2, 526.44 )
scale = Vector2( 0.200001, 0.239999 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_direction/up_key"]
position = Vector2( 328, 526.5 )
shape = SubResource( 14 )

[node name="down_key" type="Area2D" parent="main_direction"]
position = Vector2( 128, 267 )
scale = Vector2( 0.6, 0.54 )

[node name="down" type="Sprite" parent="main_direction/down_key"]
position = Vector2( 329.2, 613.44 )
scale = Vector2( 0.2, 0.24 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_direction/down_key"]
position = Vector2( 329, 613.5 )
shape = SubResource( 15 )

[node name="left_key2" type="Sprite" parent="main_direction"]
visible = false
position = Vector2( 257, 599 )
scale = Vector2( 0.126493, 0.126493 )
texture = ExtResource( 1 )

[node name="stage1_direction" type="Node" parent="."]

[node name="left_key" type="Area2D" parent="stage1_direction"]
position = Vector2( 225, 224 )
scale = Vector2( 0.3, 0.27 )

[node name="left" type="Sprite" parent="stage1_direction/left_key"]
position = Vector2( 217.2, 613.44 )
scale = Vector2( 0.2, 0.24 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage1_direction/left_key"]
position = Vector2( 217, 613.5 )
shape = SubResource( 12 )

[node name="right_key" type="Area2D" parent="stage1_direction"]
position = Vector2( 225, 224 )
scale = Vector2( 0.3, 0.27 )

[node name="right" type="Sprite" parent="stage1_direction/right_key"]
position = Vector2( 441.2, 613.44 )
scale = Vector2( 0.2, 0.24 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage1_direction/right_key"]
position = Vector2( 441.25, 613.5 )
shape = SubResource( 13 )

[node name="up_key" type="Area2D" parent="stage1_direction"]
position = Vector2( 226, 223 )
scale = Vector2( 0.3, 0.27 )

[node name="up" type="Sprite" parent="stage1_direction/up_key"]
position = Vector2( 328.2, 526.44 )
scale = Vector2( 0.200001, 0.239999 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage1_direction/up_key"]
position = Vector2( 328, 526.5 )
shape = SubResource( 14 )

[node name="down_key" type="Area2D" parent="stage1_direction"]
position = Vector2( 225, 224 )
scale = Vector2( 0.3, 0.27 )

[node name="down" type="Sprite" parent="stage1_direction/down_key"]
position = Vector2( 329.2, 613.44 )
scale = Vector2( 0.2, 0.24 )
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="stage1_direction/down_key"]
position = Vector2( 329, 613.5 )
shape = SubResource( 15 )

[node name="stage2_direction" type="Node" parent="."]

[node name="Key" parent="stage2_direction" instance=ExtResource( 5 )]
position = Vector2( 260, 143 )
scale = Vector2( 0.2, 0.2 )

[node name="Player" type="Node" parent="."]

[node name="main_player" parent="Player" instance=ExtResource( 3 )]
position = Vector2( 100, 529 )
scale = Vector2( 2.2, 2.2 )

[node name="stage1_player" type="KinematicBody2D" parent="Player"]
position = Vector2( 223, 365 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player/stage1_player"]
frames = SubResource( 10 )
animation = "back"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/stage1_player"]
position = Vector2( -0.75, 0.25 )
shape = SubResource( 11 )

[node name="stage2_player" type="KinematicBody2D" parent="Player"]
position = Vector2( 324, 109 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player/stage2_player"]
frames = SubResource( 10 )
animation = "back"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/stage2_player"]
position = Vector2( -0.75, 0.25 )
shape = SubResource( 11 )

[connection signal="body_entered" from="main_direction/left_key" to="Player/stage1_player" method="_on_left_key_body_entered"]
[connection signal="body_exited" from="main_direction/left_key" to="Player/stage1_player" method="_on_left_key_body_exited"]
[connection signal="body_entered" from="main_direction/right_key" to="Player/stage1_player" method="_on_right_key_body_entered"]
[connection signal="body_exited" from="main_direction/right_key" to="Player/stage1_player" method="_on_right_key_body_exited"]
[connection signal="body_entered" from="main_direction/up_key" to="Player/stage1_player" method="_on_up_key_body_entered"]
[connection signal="body_exited" from="main_direction/up_key" to="main_direction/up_key" method="_on_up_key_body_exited"]
[connection signal="body_exited" from="main_direction/up_key" to="Player/stage1_player" method="_on_up_key_body_exited"]
[connection signal="body_entered" from="main_direction/down_key" to="Player/stage1_player" method="_on_down_key_body_entered"]
[connection signal="body_exited" from="main_direction/down_key" to="Player/stage1_player" method="_on_down_key_body_exited"]
[connection signal="body_entered" from="stage1_direction/left_key" to="Player/stage2_player" method="_on_left_key_body_entered"]
[connection signal="body_exited" from="stage1_direction/left_key" to="Player/stage2_player" method="_on_left_key_body_exited"]
[connection signal="body_entered" from="stage1_direction/right_key" to="Player/stage2_player" method="_on_right_key_body_entered"]
[connection signal="body_exited" from="stage1_direction/right_key" to="Player/stage2_player" method="_on_right_key_body_exited"]
[connection signal="body_entered" from="stage1_direction/up_key" to="Player/stage2_player" method="_on_up_key_body_entered"]
[connection signal="body_exited" from="stage1_direction/up_key" to="Player/stage2_player" method="_on_up_key_body_exited"]
[connection signal="body_entered" from="stage1_direction/down_key" to="Player/stage2_player" method="_on_down_key_body_entered"]
[connection signal="body_exited" from="stage1_direction/down_key" to="Player/stage2_player" method="_on_down_key_body_exited"]
